<resources>
    <string name="app_name">Happy Brithday~</string>
    <string name="name">To Dear JIAN:</string>
    <string name="wish">Best Wishes To You!</string>
    <string name="mywish">Happy Brithday! Happy Everyday!</string>
    <string name="sender">From: Ming\n2019.12.09</string>
    <string name="me">me</string>
    <string name="ok">ok</string>
    <string name="wishyou">wish you:</string>
    <string name="haha">haha</string>

</resources>
